<resources>
    <string name="app_name">Recipes</string>
    <string name="description_add_recipe_button">Button to add new recipe</string>
    <string name="description_switch_dark_mode">Button to switch to dark mode</string>
    <string name="add_recipe_title">Add Recipe</string>
    <string name="recipe_name_hint">Name</string>
    <string name="button_save">Save</string>
    <string name="recipe_description_hint">Description</string>
    <string name="add_image_button">Bild hinzufügen</string>
</resources>
